add Android-compatible null stream implementations and logger fixes (#993)
- added `IO` utility class for `nullInputStream` and `nullOutputStream`
to support Android devices below API 33.

and also a simple fix for this error:
```
java.lang.NoSuchMethodError
Message: No static method getLogger(Ljava/lang/String;)Ljava/lang/System$Logger; in class Ljava/lang/System; or its super classes (declaration of 'java.lang.System' appears in /apex/com.android.art/javalib/core-oj.jar)
```

---------

Signed-off-by: Vivek <itsvks19@gmail.com>
Co-authored-by: andreatp <andrea.peruffo1982@gmail.com>